--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Dev Dependencies
         uses: BSFishy/pip-action@v1
         with:
-          requirements: dev-requirements.txt
+          requirements: requirements-dev.txt
 
       - name: "Run PEP8"
         uses: quentinguidee/pep8-action@v1
